--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,18 @@
 spring.application.name=SwapSmart
+
+# Hidden local properties file contains db info we need, so setting active here to use
+spring.profiles.active=local
+
+# Database Connection info below; hardcoded testing
+# Using Session Pool on Supabase
+spring.datasource.url=jdbc:postgresql://aws-1-us-east-1.pooler.supabase.com:5432/postgres?sslmode=require
+spring.datasource.username=postgres.gyctjuntyyhoevdsgnmu
+spring.datasource.password=7OizjzIvgM6vWSe1
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+# Temporarily disabling Spring Security for now
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
